update isValidURI method